address code review comments